--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-verify": "^2.0.11",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@types/mocha": "^9.1.0",
+    "chai": "^4.5.0",
     "dotenv": "^16.4.5",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
     "hardhat": "^2.22.15"
   }
